UE_TOB/tps/.svn/pristine/f9/f9e222a8e89dc51da8331e79b8b91777685ab14b.svn-base
allumettes/Jouer.java:63: error: variable j1 might not have been initialized
			if (j1 == null) {
			    ^
1 error
